tests/test-results.txt
Microsoft Windows [Version 10.0.26100.4652]
(c) Microsoft Corporation. All rights reserved.

C:\Users\johnm\Documents\GitHub>cd C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2>pytest               # should pass
================================================= test session starts =================================================
platform win32 -- Python 3.12.10, pytest-7.3.1, pluggy-1.5.0
rootdir: C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2
plugins: anyio-3.7.1
collected 0 items

================================================ no tests ran in 0.05s ================================================
ERROR: file or directory not found: #


C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2>uvicorn riskportalai.main:app --reload
INFO:     Will watch for changes in these directories: ['C:\\Users\\johnm\\Documents\\GitHub\\riskprod-ai-chatbot-v2']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [10092] using WatchFiles
INFO:     Started server process [7840]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [7840]
INFO:     Stopping reloader process [10092]

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2>cd test
The system cannot find the path specified.

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2>cd tests

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2\tests>pytest               # should pass
================================================= test session starts =================================================
platform win32 -- Python 3.12.10, pytest-7.3.1, pluggy-1.5.0
rootdir: C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2\tests
plugins: anyio-3.7.1
collected 0 items

================================================ no tests ran in 0.02s ================================================
ERROR: file or directory not found: #


C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2\tests>uvicorn riskportalai.main:app --reload
INFO:     Will watch for changes in these directories: ['C:\\Users\\johnm\\Documents\\GitHub\\riskprod-ai-chatbot-v2\\tests']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [23812] using WatchFiles
Process SpawnProcess-1:
Traceback (most recent call last):
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\multiprocessing\process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\server.py", line 66, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\asyncio\base_events.py", line 691, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\server.py", line 70, in serve
    await self._serve(sockets)
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\server.py", line 77, in _serve
    config.load()
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\config.py", line 435, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\importer.py", line 22, in import_from_string
    raise exc from None
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\johnm\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1310, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1324, in _find_and_load_unlocked
ModuleNotFoundError: No module named 'riskportalai'
INFO:     Stopping reloader process [23812]

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2\tests>pip pytest
ERROR: unknown command "pytest"

C:\Users\johnm\Documents\GitHub\riskprod-ai-chatbot-v2\tests>